--- a/app/src/main/res/layout/activity_hilt_second.xml
+++ b/app/src/main/res/layout/activity_hilt_second.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".hilt.me.HiltActivity">
-
+    tools:context=".hilt.dn.HiltSecondActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
