--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".hilt.HiltSecondActivity">
+    tools:context=".hilt.me.HiltSecondActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
