--- a/app/src/main/res/layout/item_ammount_simple.xml
+++ b/app/src/main/res/layout/item_ammount_simple.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:text="10"
         android:textColor="#282828"
-        android:textSize="30sp"
+        android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
