--- a/app/src/main/res/layout/item_ammount.xml
+++ b/app/src/main/res/layout/item_ammount.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:FontTextView="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:background="@drawable/item_amount_default_bg"
-    android:paddingStart="10dp"
+    android:background="#EBEBEB"
     android:paddingTop="5dp"
-    android:paddingEnd="10dp"
     android:paddingBottom="5dp">
 
 
@@ -17,10 +15,9 @@
         android:id="@+id/rm_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="2dp"
         android:text="RM"
         android:textColor="#282828"
-        android:textSize="12dp"
+        android:textSize="10dp"
         FontTextView:kit_typeFace="@string/font_type_rb_Regular"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/amount_tv"
@@ -33,13 +30,13 @@
         android:layout_height="wrap_content"
         android:text="100"
         android:textColor="#282828"
-        android:textSize="12dp"
+        android:textSize="10dp"
+        FontTextView:ignore="HardcodedText"
         FontTextView:kit_typeFace="@string/font_type_rb_Regular"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/rm_tv"
-        app:layout_constraintTop_toTopOf="parent"
-        FontTextView:ignore="HardcodedText" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
