--- a/app/src/main/res/layout/activity_play_store.xml
+++ b/app/src/main/res/layout/activity_play_store.xml
@@ -28,4 +28,16 @@
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_secret_key" />
+
+    <Button
+        android:id="@+id/open_permission"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="open Need Permission"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/opengoogle" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
