--- a/app/src/main/res/layout/activity_play_store.xml
+++ b/app/src/main/res/layout/activity_play_store.xml
@@ -10,12 +10,12 @@
         android:id="@+id/tv_secret_key"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:lines="6"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:lines="6"
         android:text="@string/secret_key"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,9 +23,9 @@
         android:id="@+id/opengoogle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="open another app"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_secret_key" />
 
@@ -33,11 +33,16 @@
         android:id="@+id/open_permission"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="open Need Permission"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/opengoogle" />
 
+    <include
+        android:id="@+id/contact_input_tips"
+        layout="@layout/activity_c"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/open_permission" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
