--- a/Mine/src/main/res/layout/activity_tab_layout.xml
+++ b/Mine/src/main/res/layout/activity_tab_layout.xml
@@ -9,13 +9,9 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tb_layout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        app:tabIndicatorHeight="0dp"
-        app:tabMaxWidth="100dp"
-        app:tabMode="scrollable"
-        app:tabPaddingEnd="-1dp">
+        app:tabMode="scrollable">
 
     </com.google.android.material.tabs.TabLayout>
 
