--- a/app/src/main/res/layout/activity_first_result.xml
+++ b/app/src/main/res/layout/activity_first_result.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".component.fragment.life.LifeActivity">
+    tools:context=".activity.activityresult.FirstResultActivity">
 
     <Button
         android:id="@+id/bt_activity"
