--- a/androidUtil/src/main/res/layout/dialog_alert.xml
+++ b/androidUtil/src/main/res/layout/dialog_alert.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:paddingLeft="10dp"
+        android:text="test"
         android:textSize="35sp" />
 
     <androidx.recyclerview.widget.RecyclerView
