--- a/app/src/main/res/layout/activity_foreground.xml
+++ b/app/src/main/res/layout/activity_foreground.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".hilt.dn.HiltMainActivity">
+    tools:context=".service.ForegroundActivity">
+
 
     <Button
-        android:id="@+id/bt_click"
+        android:id="@+id/bt_start_service"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="provide banner" />
+        android:text="startService" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
