--- a/app/src/main/res/layout/activity_picker_images.xml
+++ b/app/src/main/res/layout/activity_picker_images.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/iv_banner"
+        android:layout_width="match_parent"
+        android:layout_height="100dp" />
 
     <Button
         android:id="@+id/button_pick_photo_video"
@@ -32,8 +35,8 @@
 
     <TextView
         android:id="@+id/text_mack_pick_media"
-        android:text="Max Pick Media: -"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="Max Pick Media: -" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
