--- a/app/src/main/res/layout/activity_photo_video_permission.xml
+++ b/app/src/main/res/layout/activity_photo_video_permission.xml
@@ -28,15 +28,12 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
+        android:layout_height="4dp"
         android:layout_marginTop="10dp"
         android:indeterminate="false"
         android:max="100"
-        android:padding="5dp"
         android:progress="40"
         android:progressDrawable="@drawable/curved_progress_bar" />
 
