--- a/app/src/main/res/layout/activity_hilt_entry.xml
+++ b/app/src/main/res/layout/activity_hilt_entry.xml
@@ -3,12 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".hilt.me.HiltActivity">
-
-    <Button
-        android:id="@+id/bt_entry"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="entry" />
+    tools:context=".hilt.HiltEntryActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
